# pixi-build-testsuite

./: .env.ci  .env.ci.example  .gitignore  .ruff.toml  README.md  lefthook.yaml  pixi.toml
.github/workflows/: CI.yml  enforce-sha.yml  lint.yml  prevent-branch-override-merge.yml
examples/multi-output/: pixi.toml
examples/multi-output/recipe/: recipe.yaml
scripts/: build-repos.py  download-artifacts.py  update-lockfiles.py
tests/data/pixi_build/build-variant-conda-config-python/: pixi.toml
tests/data/pixi_build/build-variant-conda-config-rattler-build/: pixi.toml
tests/data/pixi_build/build-variant-files/: pixi.toml  recipe.yaml
tests/data/pixi_build/build-variant-files-python/: pixi.toml
tests/data/pixi_build/build-variant-files-rattler-build/: pixi.toml
tests/data/pixi_build/config-pickup-test/: pixi.toml  recipe.yaml
tests/data/pixi_build/cpp-with-path-to-source/: pixi.toml
tests/data/pixi_build/cycle/: pixi.toml
tests/data/pixi_build/cycle/package_a/: CMakeLists.txt
tests/data/pixi_build/cycle/package_a/src/: main.cpp
tests/data/pixi_build/maturin/: pixi.toml
tests/data/pixi_build/multi-output-pin/: pixi.toml
tests/data/pixi_build/recursive_source_build_dep/package_b/: CMakeLists.txt  pixi.toml
tests/data/pixi_build/recursive_source_build_dep/package_b/src/: package_b.h
tests/integration_python/: common.py  conftest.py  test_backends.py  test_build.py  test_config.py  test_config_pickup.py  test_global.py  test_multi_output.py  test_ros.py
tests/integration_python/test_specified_build_source/: test_git.py
(+28 files in other folders)
